--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@
     
 }
 body{
-    background: url(../public/background.jpg);
+    background: url(background.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     
